sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:4: error: value unary_! is not a member of Unit
    if (!traverse(i))
        ^AlgBubbleSort3:17: warning: enclosing method traverse has result type Unit: return value discarded
  return swapped;
  ^